# goto

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.ps1  install.sh  release-please-config.json
.ai-generated/: 2026-04-22-prune-stale-bookmarks-design.md  2026-04-22-prune-stale-bookmarks-plan.md
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/superpowers/specs/: 2026-04-22-install-script-design.md
src/: app.rs  bookmarks.rs  cli.rs  init.rs  lib.rs  main.rs  selector.rs  store.rs
tests/: cli_smoke.rs  store.rs
